--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,9 @@
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10"/>
     <!-- Problem with higher SDK levels: menu button disappears! -->
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <!-- These are needed for the Memory Save/Load feature. -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:description="@string/app_desc" android:icon="@drawable/icon"
         android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar"
