New version, small change in load/save

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" ?>
-<manifest android:versionCode="3" android:versionName="0.3" package="br.com.epx.andro16c"
-		xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+<?xml version="1.0" ?><manifest android:installLocation="auto" android:versionCode="6"
+        android:versionName="0.6" package="br.com.epx.andro16c"
+        xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="10"/>
     <!-- Problem with higher SDK levels: menu button disappears! -->
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -8,11 +8,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <application android:description="@string/app_desc" android:icon="@drawable/icon"
-        android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar"
-        android:allowBackup="true">
-        <activity android:configChanges="keyboardHidden|orientation" android:label="@string/app_name"
-			android:name=".Andro16CActivity">
+    <application android:allowBackup="true" android:description="@string/app_desc" android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:configChanges="keyboardHidden|orientation" android:label="@string/app_name" android:name=".Andro16CActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
