Updated version (no HTML5)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-._*.png.*
-bin/
-gen/
-ant.properties
-build.xml
-local.properties
-assets/TODO
-TODO
-assets/icon.png
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+build/
+gradle/
+gradlew
+gradlew.bat
